Grace/tests/gibbs/errors/t108.grace
// ERROR = P1018
method a(b:) {}
